--- a/02_Hibernate Using property File/src/hibernate.properties
+++ b/02_Hibernate Using property File/src/hibernate.properties
@@ -1,9 +1,9 @@
 # Hibernate database configurations
 
 hibernate.connection.driver_class = com.mysql.cj.jdbc.Driver
-hibernate.connection.url = jdbc:mysql://localhost:3306/hibernate
+hibernate.connection.url = jdbc:mysql://localhost:3306/hibernategdse
 hibernate.connection.username = root
-hibernate.connection.password = Ijse@123
+hibernate.connection.password = 1234
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = update
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
